[package]
name = "js"
version = "0.1.2"
authors = ["Richard Anaya"]
edition = "2018"
description = "Call Javascript from WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/js_ffi"
readme="README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
