[package]
name = "callback"
version = "0.5.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A library for handling callbacks in WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"

[dependencies]
spin = "0.7.0"

[dependencies.once_cell]
version = "1.5.2"
features = []
