[package]
name = "cargo-webassembly"
version = "0.0.18"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A cargo utility for working on WebAssembly"
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url= "2.2.0"
webbrowser = "0.5.5"
clap = { version = "2.33.3", features = ["yaml"] }
colored = "2.0.0"
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
