[package]
name = "emoji"
version = "0.1.1"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library of emoji"
repository = "https://github.com/richardanaya/js-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
