[package]
name = "js-bindgen"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
description = "Generate bindings that call JavaScript from WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/richardanaya/js-wasm"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust="0.4"
tera = "1"
serde = { version = "1.0", features = ["derive"] } 