[package]
name = "js"
version = "0.3.1"
authors = ["Richard Anaya"]
edition = "2021"
description = "Call JavaScript from WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"
rust-version="1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstring = "0.0"
callback= {path="../callback",version="0.5"}