[package]
name = "web"
version = "0.2.7"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library for interacting with the web browser"
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globals = "1.0.5"
html_color = "0.0.0"
js = {path="../js",version="0"}
