[package]
name = "web_common"
version = "0.4.3"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Web functions for common operations"
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js = {path="../js",version="0"}
