[package]
name = "web-dom"
version = "0.3.2"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Web functions for DOM manipulation"
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js = {path="../js",version="0.2"}
callback= {path="../callback",version="0.5.0"}
spin = "0.7.0"

[dependencies.lazy_static]
version = "1.4.0"
default-features = false
features = ["spin_no_std"]
