[package]
name = "web_macros"
version = "0.0.0"
edition = "2021"
authors = ["Richard Anaya"]
license = "MIT OR Apache-2.0"
description = "A library for interacting with the web browser"
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.23"
# full syn
syn = { version = "1.0.107", features = ["full"] }
