[package]
name = "example"
version = "0.1.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web = {path="../../crates/web"}
hecs = "0.3.1"

[dependencies.lazy_static]
version = "1.4.0"
default-features = false
features = ["spin_no_std"]


[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
