[package]
name = "example"
version = "0.1.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web_console = {path="../../crates/web_console"}
web_local_storage = {path="../../crates/web_local_storage"}

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
