[package]
name = "example"
version = "0.1.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js = {path="../../rust/js"}
web_timer = {path="../../rust/web_timer"}
web_console = {path="../../rust/web_console"}
web_random = {path="../../rust/web_random"}

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true