[package]
name = "callback"
version = "0.5.4"
authors = ["Richard Anaya"]
edition = "2021"
description = "A library for handling callbacks in WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"
rust-version="1.63"

[dependencies]
spin = "0"
