[package]
name = "webcomponent"
version = "0.6.2"
edition = "2018"
authors = ["Richard Anaya"]
categories = ["wasm", "no-std", "web"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/richardanaya/webcomponent"
repository = "https://github.com/richardanaya/webcomponent"
description = "A library for creating web components"

[dependencies]
js = {path="../js",version="0"}
callback= {path="../callback",version="0.5.0"}
spin = "0.7.0"

[dependencies.lazy_static]
version = "1"
default-features = false
features = ["spin_no_std"]
