[package]
name = "callback"
version = "0.4.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A library for handling callbacks in WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/callback"
readme = "README.md"

[dependencies]
spin = "0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
