[package]
name = "js"
version = "0.2.6"
authors = ["Richard Anaya"]
edition = "2018"
description = "Call JavaScript from WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/js-wasm"
readme="README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
