[package]
name = "web_console"
version = "0.2.1"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "js_ffi for console functions"
repository = "https://github.com/richardanaya/web_console"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_ffi = "0.6"
globals = "1"
