[package]
name = "web_random"
version = "0.1.0"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Web functions for randomness"
repository = "https://github.com/richardanaya/js-wasm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js = "0.2"

[dependencies.rand]
version = "0.7.3"
features = []
